style(import-dialog): fix button and input width alignment
- Add padding to .file-name-form instead of individual margins
- Both elements now properly aligned within dialog

--- a/src/app/components/projects/import-project-dialog/import-project-dialog.component.scss
+++ b/src/app/components/projects/import-project-dialog/import-project-dialog.component.scss
@@ -37,16 +37,16 @@
 
 .file-name-form {
   width: 100%;
+  padding: 0 24px;
+  box-sizing: border-box;
 }
 
 .file-name-form-field {
-  width: calc(100% - 72px);
-  margin-left: 24px;
+  width: 100%;
 }
 
 .empty {
-  width: calc(100% - 72px);
-  margin-left: 24px;
+  width: 100%;
 }
 
 .delete-button {
